# decentralized-election-system

./: Anchor.toml  Cargo.toml  README.md
client/election/: Cargo.toml
client/election/src/: main.rs
programs/decentralized-election/: Cargo.toml
programs/decentralized-election/src/: apply.rs  change_phase.rs  change_stage.rs  election_enums.rs  initiate_election.rs  lib.rs  register.rs  vote.rs
