[package]
name = "election"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "0.25.0"
decentralized-election = { path = "../../programs/decentralized-election", features = ["no-entrypoint"] }
